syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Pcf.GivingToCustomer.WebHost.Protos";

package customers;

// Сервис для работы с клиентами
service CustomersService {
  // Получить список всех клиентов
  rpc GetCustomers (google.protobuf.Empty) returns (GetCustomersResponse);

  // Получить клиента по ID
  rpc GetCustomer (GetCustomerRequest) returns (CustomerResponse);

  // Создать нового клиента
  rpc CreateCustomer (CreateCustomerRequest) returns (CustomerResponse);

  // Обновить клиента
  rpc UpdateCustomer (UpdateCustomerRequest) returns (google.protobuf.Empty);

  // Удалить клиента
  rpc DeleteCustomer (DeleteCustomerRequest) returns (google.protobuf.Empty);
}

// Запрос на получение клиента по ID
message GetCustomerRequest {
  string customer_id = 1;
}

// Запрос на создание клиента
message CreateCustomerRequest {
  string first_name = 1;
  string last_name = 2;
  string email = 3;
  repeated string preference_ids = 4; // GUID в виде строк
}

// Запрос на обновление клиента
message UpdateCustomerRequest {
  string customer_id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  repeated string preference_ids = 5; // GUID в виде строк
}

// Запрос на удаление клиента
message DeleteCustomerRequest {
  string customer_id = 1;
}

// Ответ со списком клиентов
message GetCustomersResponse {
  repeated CustomerShort customers = 1;
}

// Краткая информация о клиенте
message CustomerShort {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
}

// Полная информация о клиенте
message CustomerResponse {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  repeated PreferenceInfo preferences = 5;
  repeated PromoCodeInfo promo_codes = 6;
}

// Информация о предпочтении
message PreferenceInfo {
  string id = 1;
  google.protobuf.StringValue name = 2;
}

// Информация о промокоде
message PromoCodeInfo {
  string id = 1;
  string code = 2;
  string service_info = 3;
  string begin_date = 4;
  string end_date = 5;
  string partner_id = 6;
}

